NEXTEUROPA-7147: Spacing on the bottom fix
Former-commit-id: e154cc43f3d25e08f54740c77b3a83daa42f629a
Former-commit-id: 01a0e2203ede8e0f77b348a6c3a6c2317ac3bdd7

--- a/sass/components/_comment.scss
+++ b/sass/components/_comment.scss
@@ -76,7 +76,7 @@ $twenty-five: 1.389em;
 }
 
 .comment__btn-add {
-  margin-top: $ten;
+  margin-top: $fifteen;
 }
 
 .comment {
