--- a/styleguide/assets/public/css/style-sass.css
+++ b/styleguide/assets/public/css/style-sass.css
@@ -6677,7 +6677,7 @@ Styleguide comment
   padding-left: 0; }
 
 .comment__btn-add {
-  margin-top: 0.556em; }
+  margin-top: 0.833em; }
 
 .comment {
   margin-bottom: 1em; }
